Update: (Fixes #685) Navbar `.navbar-text-truncate` should have max-width 200px and use rem instead of px/em

--- a/packages/clay/src/scss/atlas/variables/_badges.scss
+++ b/packages/clay/src/scss/atlas/variables/_badges.scss
@@ -1,4 +1,4 @@
-$badge-border-radius: 10em !default;
+$badge-border-radius: 10rem !default;
 $badge-font-size: 0.6875rem !default; // 11px
 $badge-font-weight: $font-weight-semi-bold !default;
 $badge-line-height: 0.875rem !default // 14px
